refactor: fix unit test